--- a/canvas.html
+++ b/canvas.html
@@ -5,14 +5,18 @@
 <canvas id="myCanvas" width="1000" height="500" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML canvas tag.</canvas>
 
+<button onclick="draw()">Click Alot</button>
 <script>
+function draw() {
+
 const c = document.getElementById("myCanvas");
 let ctx = c.getContext("2d");
 let circles = 50;
-
+const colors = ['blue', 'red', 'orange', 'green', 'yellow', 'pink', 'lightblue', 'black'];
 
 
 for (let i = 0; i < circles; i++) {
+let  onecolor = Math.floor((Math.random() * 8));
 ctx.beginPath();
 ctx.arc(i * 10 ,10 * i,40,0,2*Math.PI);
 if (i % 2 === 0) {
@@ -24,16 +28,18 @@ ctx.stroke();
 }
 
 for (let i = 0; i < circles; i++) {
+let  onecolor = Math.floor((Math.random() * 8));
 ctx.beginPath();
 ctx.arc(i * 20 ,20 * i,100,0,2*Math.PI);
 if (i % 2 === 0 && i !== 4 && i !== 10 && i !== 20) {
-ctx.strokeStyle = "#FF6F61";
+ctx.strokeStyle = colors[onecolor];
 } else if (i % 2 === 1) {
-ctx.strokeStyle = "#6B5B95";
+ctx.strokeStyle = colors[onecolor];
 } else {
-ctx.strokeStyle = "#88B04B";
+ctx.strokeStyle = colors[onecolor];
 }
 ctx.stroke();
+}
 }
 
 </script> 
