--- a/canvas.html
+++ b/canvas.html
@@ -6,7 +6,7 @@
 Your browser does not support the HTML canvas tag.</canvas>
 
 <button id="mystop" onclick="myStart()" style="display:none;">Start</button>
-<button onclick="myStopFunction()">Stop Alot</button>
+<button onclick="myStopFunction()">Stop</button>
 <script>
 function draw() {
 
